kubernetes/services/bookstore-catalog-service-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-catalog-service-blue
  namespace: bookstore
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookstore-catalog-service
      version: blue
  template:
    metadata:
      labels:
        app: bookstore-catalog-service
        version: blue
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: bookstore-catalog-service
          image: bookstoreapplicationregistry.azurecr.io/bookstore-catalog-service:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 6001
          resources:
            requests:
              memory: "256Mi"
              cpu: "300m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
