kubernetes/services/bookstore-catalog-service-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-catalog-service-green
  namespace: bookstore
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookstore-catalog-service
      version: green
  template:
    metadata:
      labels:
        app: bookstore-catalog-service
        version: green
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: bookstore-catalog-service
          image: bookstoreapplicationregistry.azurecr.io/bookstore-catalog-service:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 6001
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "1024Mi"
              cpu: "800m"
          lifecycle:
            preStop:
              exec:
                command: [ "sleep", "45" ]
