kubernetes/services/bookstore-api-gateway-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-api-gateway-server
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-api-gateway-server
  template:
    metadata:
      labels:
        app: bookstore-api-gateway-server
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: bookstore-api-gateway-server
          image: cloudgp.azurecr.io/bookstore-api-gateway-server:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8765
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-api-gateway-server
  namespace: bookstore
spec:
  selector:
    app: bookstore-api-gateway-server
  ports:
    - protocol: TCP
      port: 8765
      targetPort: 8765
