kubernetes/services/bookstore-billing-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-billing-service
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-billing-service
  template:
    metadata:
      labels:
        app: bookstore-billing-service
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: bookstore-billing-service
          image: cloudgp.azurecr.io/bookstore-billing-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-billing-service
  namespace: bookstore
spec:
  selector:
    app: bookstore-billing-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
