kubernetes/services/bookstore-catalog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-catalog-service
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-catalog-service
  template:
    metadata:
      labels:
        app: bookstore-catalog-service
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: bookstore-catalog-service
          image: bookstoreapplicationregistry.azurecr.io/bookstore-catalog-service:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 6001
          resources:
            requests:
              memory: "256Mi"
              cpu: "400m"
            limits:
              memory: "256Mi"
              cpu: "800m"
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-catalog-service
  namespace: bookstore
spec:
  selector:
    app: bookstore-catalog-service
  ports:
    - protocol: TCP
      port: 6001
      targetPort: 6001
