kubernetes/services/bookstore-consul.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-consul-discovery
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-consul-discovery
  template:
    metadata:
      labels:
        app: bookstore-consul-discovery
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: consul
          image: consul:1.15.4
          ports:
            - containerPort: 8500

---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-consul-discovery
  namespace: bookstore
spec:
  selector:
    app: bookstore-consul-discovery
  ports:
    - protocol: TCP
      port: 8500
      targetPort: 8500
