kubernetes/services/bookstore-payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-payment-service
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-payment-service
  template:
    metadata:
      labels:
        app: bookstore-payment-service
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: bookstore-payment-service
          image: cloudgp.azurecr.io/bookstore-payment-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-payment-service
  namespace: bookstore
spec:
  selector:
    app: bookstore-payment-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
