kubernetes/services/frontend-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-frontend
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-frontend
  template:
    metadata:
      labels:
        app: bookstore-frontend
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: bookstore-frontend
          image: cloudgp.azurecr.io/bookstore-frontend:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-frontend
  namespace: bookstore
spec:
  selector:
    app: bookstore-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
